Fuoten 0.8.0 - 2022-03-06
- General
  * improved: switch to CMake (#71)
  * improved: generate translation binaries at build time (#73)
  * improved: generate PNG icons at build time (#72)
- SailfishOS
  * new: add default config values (#76)
  * improved: better caching of favicons (#46)
  * improved: use new Gecko based WebView for internal article display (#69)
  * improved: use new sharing API (#70)
  * improved: use sailjail sandboxing (#74)

Fuoten 0.7.1 - 2020-11-26
- General
  * fixed: update to current libfuoten to handle changes in News App API (#63)

Fuoten 0.7.0 - 2020-10-17
- General
  * note: seventh preview release
  * improved: translation updates
- SailfishOS
  * new: implement remote wipe (#61)
  * new: implement account deletion (#60)
  * new: use Nextcloud Login Flow (#57)
  * improved: option for navigating back after marking feed/folder as read (#47)
  * improved: sharing dialog (#56)

Fuoten 0.6.6 - 2019-05-06
- General
  * note: maintenance update for sixth preview release
  * fixed: article list is not updated (#52)
  * improved: translation updates

Fuoten 0.6.5 - 2019-04-30
- SailfishOS
  * note: maintenance update for sixth preview release
  * changed: hide articles with future publish date (#50)
  * changed: only hide web view settings when open in external browser has been selected (#51)
- General
  * new: Chinese (China) translation by Rui Kon

Fuoten 0.6.4 - 2018-12-04
- SailfishOS
  * note: maintenance update for sixth preview release
  * fixed: text that is too long destroys the layout (#43)
  * fixed: renaming dialogs are not accepted on enter key (#45)

Fuoten 0.6.3 - 2018-11-26
- SailfishOS
  * note: maintenance update for sixth preview release
  * new: support compressed server responses (gzip and deflate)
  * improved: use icons fitting the current screen pixel ratio
  * improved: add an option to disable the push up menu on article page and hide it by default